# download_github_repo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: .env  exmaple.env  main.py
