[tool.poetry]
name = "download-github-repo"
version = "0.1.0"
description = ""
authors = ["viktor <18380220117@stu.nsu.edu.cn>"]
readme = "README.md"
packages = [{include = "download_github_repo"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
default = true

[tool.yapf]
based_on_style = "google"
coalesce_brackets = true
dedent_closing_brackets = true

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
